snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/maven-metadata.xml.sha512
58aabde33e6959ae81af47d9dd10b19da9e4bc7d0dc34a9e972ee5cc9ba4ef8867c874f2c0fa9033937c05b267a5004aa3fc1ade1f7207e87ee0af01ee9d97f0